# homelab-demo

./: .gitignore  .sops.yaml  README.md  TODO.md  adzuna_API_response.json  bonsai-products-import.csv  jobturbo.md  watch_deployment.sh  zoom-out-image.py
.beads/: issues.jsonl
.github/workflows/: WORDPRESS-SECRETS-SETUP.md  demo-django.yaml  dns-management.yml  terraform.yml  tested-django.yaml  wordpress-secrets-update.yaml
apps/base/cluster-dashboard/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml  tailscale-config.yaml
apps/freelance-radar/: Dockerfile  README.md
apps/staging/: kustomization.yaml
bonsai-chatbot-plugin/: README.md  bonsai-chatbot.php
bonsai-garden-theme/: README.md  footer.php  front-page.php  functions.php  header.php  index.php  style.css  woocommerce.php
cloud-init/: README.md  control-plane.yaml  worker-1.yaml  worker-2.yaml
cluster-dashboard/: .dockerignore  README.md  pyproject.toml
cluster-dashboard/src/: main.py
cluster-dashboard/src/static/css/: style.css
cluster-dashboard/src/templates/: dashboard.html
clusters/staging/: apps.yaml  infrastructure.yaml
demo-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
demo-api/src/: main.py
demo-django/: .coverage  .dockerignore  Dockerfile  README.md  TESTING.md  pyproject.toml  pytest.ini
demo-django/src/core/: test_pytest.py  tests.py  urls.py  views.py
demo-django/src/core/templates/core/: home.html
demo-django/src/demo_django/: asgi.py  settings.py  urls.py  wsgi.py
docker/django-crm/: Dockerfile  entrypoint.sh  settings_docker.py
docs/: Cert-Provider-Migration-Plan.md  deployment.md  dns-workflow-quick-reference.md  kubecraft-forum-post.md  kubectl-quickreference.md  migration-checklist.md  migration-quick-start.md  migration-rollback.md  migration-strategy.md  persistent-storage.md  tailnet-only-apps.md  testing-deployments.md  wallabag-deployment-test.md
product-images/: README.md  download-bonsai-images.sh
scripts/: import-wordpress-secrets.sh  update-secret-locally.sh
terraform/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
terraform/cloud-init/: control-plane.tftpl  worker.tftpl
terraform/dns/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tested-django/: .dockerignore  Dockerfile  README.md  pyproject.toml
tested-django/src/: manage.py
tested-django/src/core/: tests.py  views.py
tested-django/src/core/templates/core/: home.html
tested-django/src/tested_django/: asgi.py  settings.py  urls.py  wsgi.py
(+206 files in other folders)
