[project]
name = "demo-django"
version = "0.1.0"
description = "Demo Django application for homelab GitOps workflow"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
