[project]
name = "demo-django"
version = "0.1.0"
description = "Demo Django application for homelab GitOps workflow"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
# Alternative to pytest.ini - can also configure pytest here
DJANGO_SETTINGS_MODULE = "demo_django.settings"
pythonpath = ["src"]
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
